<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">TagAlong</string>
  <string name="Tagalong">Tagalong</string>
  <string name="Login">Login</string>
  <string name="Logout">Logout</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="action_settings">Settings</string>
  <string name="register">Register Here</string>
  <string name="register_button">Register</string>
  <string name="already_registered">Already Registered? Log in</string>
  <string name="full_name">Full Name</string>
  <string name="event_name">Event Name</string>
  <string name="event_location">Location</string>
  <string name="event_time">Time</string>
  <string name="invite_input">Invite Guests</string>
  <string name="submit_new_event">Create Event</string>
  <string name="facebook_app_id">1779316108962161</string>
  <string name="google_maps_key">AIzaSyDY98yTMfYandrnkYKwng8ZGf83DER1Ey8</string>
  <string name="event_time_picker">Set Event Time</string>
  <string name="event_description">Event Description</string>


  <string name="email_toast">Invalid Email Address!</string>
  <string name="password_toast">Passwords must have at least 8 characters, 1 capital letter,
                                  and must include letters and numbers!</string>
  <string name="both_invalid_toast">Either password or email is invalid!</string>
  <string name="missing_event_field">Missing Field!</string>

  <string name="place_details">Place Details</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_maps">Map</string>

</resources>
