<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
							xmlns:tools="http://schemas.android.com/tools"
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:paddingLeft="0dp"
							android:paddingRight="0dp"
							android:paddingTop="0dp"
							android:paddingBottom="0dp">

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:fillViewport="true">

		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#ffffff">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="0dp"
				android:orientation="vertical"
				android:padding="10dip" >

				<ImageView
					android:layout_width="200dip"
					android:layout_height="65dip"
					android:layout_marginTop="30dip"
					android:layout_marginBottom="10dip"
					android:layout_gravity="center"
					android:src="@drawable/tagalong_logo"
					android:layout_alignParentTop="true"
					android:gravity="center"/>
			
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/full_name"
					android:textColor="#372c24" />

				<EditText
					android:id="@+id/etName"
					android:paddingLeft="3dp"
					android:layout_height="35dp"
					android:layout_marginLeft="15dp"
					android:layout_marginTop="15dp"
					android:layout_marginBottom="20dp"
					android:layout_marginRight="15dp"
					android:layout_centerVertical="true"
					android:layout_width="match_parent"
					android:singleLine="true"
					android:background="@drawable/edit_text"/>
	        
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/email"
					android:textColor="#372c24" />

				<EditText
					android:id="@+id/etEmail"
					android:paddingLeft="3dp"
					android:layout_height="35dp"
					android:layout_marginLeft="15dp"
					android:layout_marginTop="15dp"
					android:layout_marginBottom="20dp"
					android:layout_marginRight="15dp"
					android:layout_centerVertical="true"
					android:layout_width="match_parent"
					android:singleLine="true"
					android:background="@drawable/edit_text"/>

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/password"
					android:textColor="#372c24" />

				<EditText
					android:id="@+id/etPassword"
					android:paddingLeft="3dp"
					android:layout_height="35dp"
					android:layout_marginLeft="15dp"
					android:layout_marginTop="15dp"
					android:layout_marginBottom="20dp"
					android:layout_marginRight="15dp"
					android:layout_centerVertical="true"
					android:layout_width="match_parent"
					android:inputType="textPassword"
					android:singleLine="true"
					android:background="@drawable/edit_text"/>
	        
				<Button
					android:id="@+id/btnRegister"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip"
					android:layout_marginBottom="5dip"
					android:layout_gravity="center"
					android:background="@color/colorPrimary"
					android:textColor="@color/white"
					android:text="@string/register_button"/>
	        
				<TextView
					android:id="@+id/login_link"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dip"
					android:layout_marginBottom="40dip"
					android:text="@string/already_registered"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/colorPrimary"/>

	    </LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>