<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:id="@+id/newEventLayout"
                tools:context=".NewEvent">
  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="?attr/colorPrimary"
    android:elevation="6dp"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="#ffffff">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:padding="10dip" >

        <ImageView
          android:layout_width="200dip"
          android:layout_height="65dip"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="0dip"
          android:layout_gravity="center"
          android:src="@drawable/tagalong_logo"
          android:layout_alignParentTop="true"
          android:gravity="center"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/event_name"
          android:textColor="#372c24"
          android:layout_weight="1"/>

        <EditText
          android:id="@+id/new_event_name"
          android:layout_height="35dp"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="15dp"
          android:layout_marginBottom="15dp"
          android:layout_marginRight="15dp"
          android:layout_centerVertical="true"
          android:layout_width="match_parent"
          android:layout_weight="3"
          android:ellipsize="start"
          android:gravity="center"
          android:hint="Event Name"
          android:inputType="text"
          android:background="@drawable/edit_text"/>

        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/event_location"
          android:textColor="#372c24" />

        <fragment
          android:id="@+id/place_autocomplete_fragment"
          android:layout_height="35dp"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="15dp"
          android:layout_marginBottom="15dp"
          android:layout_marginRight="15dp"
          android:layout_centerVertical="true"
          android:hint="Pick a Place!"
          android:ellipsize="start"
          android:gravity="center"
          android:layout_width="match_parent"
          android:background="@drawable/edit_text"
          android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
          tools:layout="@layout/notification_template_part_chronometer"/>

        <!--
          <AutoCompleteTextView
            android:id="@+id/autocomplete_places"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="Event Location"
            android:inputType="text"
            android:background="@drawable/edit_text" />
         -->

        <TextView
          android:id="@+id/eventDate"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/event_time"
          android:textColor="#372c24" />


        <Button
          android:layout_marginBottom="15dp"
          android:layout_width="150dp"
          android:layout_height="40dp"
          android:text="@string/event_time_picker"
          android:layout_gravity="center"
          android:background="@color/colorPrimary"
          android:textColor="@color/white"
          android:layout_marginTop="10dp"
          android:onClick="showTimePickerDialog"/>

        <TextView
          android:id="@+id/selectedValues"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/event_description"
          android:textColor="#372c24" />

        <RelativeLayout
          android:id="@+id/inviteLayout"
          android:layout_marginTop="15dp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">

          <TextView
            android:id="@+id/inviteText"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

          <Button
            android:id="@+id/inviteButton"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:text="Choose Guests"
            android:layout_gravity="center"
            android:drawableRight="@drawable/dropdown_icon"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        </RelativeLayout>

        <EditText
          android:id="@+id/new_event_description"
          android:layout_height="35dp"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
          android:layout_marginRight="15dp"
          android:layout_centerVertical="true"
          android:layout_width="match_parent"
          android:layout_weight="3"
          android:ellipsize="start"
          android:gravity="center"
          android:hint="Description (Max 300 characters)"
          android:maxLength="300"
          android:inputType="text"
          android:background="@drawable/edit_text" />

        <Button
          android:id="@+id/submitNewEvent"
          android:layout_width="150dp"
          android:layout_height="40dp"
          android:text="@string/submit_new_event"
          android:layout_gravity="center"
          android:background="@color/colorPrimary"
          android:textColor="@color/white"
          android:layout_marginTop="10dp"/>
      </LinearLayout>
    </ScrollView>
  </LinearLayout>
</LinearLayout>